--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -335,6 +335,7 @@ $input-group-addon-bg:           #fff !default;
 // $grid-columns:              12 !default;
 // //** Padding between columns. Gets divided in half for the left and right.
 $grid-gutter-width:         30px !default;
+$gutter:                    $grid-gutter-width;
 // // Navbar collapse
 // //** Point at which the navbar becomes uncollapsed.
 // $grid-float-breakpoint:     $screen-sm-min !default;
@@ -401,11 +402,13 @@ $navbar-default-link-active-color:         #000 !default;
 // //=== Inverted navbar
 // // Reset inverted navbar basics
 // $navbar-inverse-color:                      lighten($gray-light, 15%) !default;
+$navbar-inverse-color:                      #fff !default;
 // $navbar-inverse-bg:                         #222 !default;
+$navbar-inverse-bg:                         #000 !default;
 // $navbar-inverse-border:                     darken($navbar-inverse-bg, 10%) !default;
 
 // // Inverted navbar links
-// $navbar-inverse-link-color:                 lighten($gray-light, 15%) !default;
+$navbar-inverse-link-color:                 #fff !default;
 // $navbar-inverse-link-hover-color:           #fff !default;
 // $navbar-inverse-link-hover-bg:              transparent !default;
 // $navbar-inverse-link-active-color:          $navbar-inverse-link-hover-color !default;
